Fixed edit athlete error. Encountered some errors with CORS on Firefox.

--- a/sips-web/src/app/components/athlete-edit/athlete-edit.component.scss
+++ b/sips-web/src/app/components/athlete-edit/athlete-edit.component.scss
@@ -14,6 +14,15 @@
   margin-bottom: 1em;
 }
 
+.input-header {
+  text-align: start;
+}
+
+.image-upload-input {
+  width: 100%;
+  margin-top: 1em;
+}
+
 .height-row,
 .name-row,
 .sport-row {
